--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,7 @@
   let ip = document.querySelector('#ip').innerText.trim();
   let port = document.querySelector('#port').innerText.trim();
 
-  const ws = new WebSocket(`wss://${ip}:${port}`);
+  const ws = new WebSocket(`${location.origin.replace(/^https/, 'wss')}`);
 
   ws.addEventListener('open', (connection) => {
     ws.addEventListener('message', (message) => {
